--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,36 +8,37 @@
 variables:
   APPLICATION_NAME: sample-app
 
-include: 
-  - local: 'ci-includes/dt_deploy-eks-oneagent.yml'
-
+#include: 
+#  - local: 'ci-includes/dt_deploy-eks-oneagent.yml'
 
 stages:
-  - aws-eks-provisioning
-  - configure-dynatrace
+  - build
+  - deploy
 
 #################################################################
-# Provisioning Stage
+# Build Stage
 #################################################################
-create-aws-environment:
-  stage: aws-eks-provisioning
-  image: registry.gitlab.com/checkelmann/cicd-tools:latest
-  environment:
-      name: test
-  variables:
-      GIT_STRATEGY: none
+docker-build-master:
+  # Official docker image.
+  image: docker:latest
+  stage: build
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-      - eksctl create cluster --config-file assets/cluster.yml --kubeconfig aws.kubeconfig
-      - export KUBECONFIG=./aws.kubeconfig
-      - kubectl apply -f assets/helm-rbac.yml
-      - helm init --service-account tiller
-      - helm repo add incubator http://storage.googleapis.com/kubernetes-charts-incubator
-      - helm install incubator/aws-alb-ingress-controller --set autoDiscoverAwsRegion=true --set autoDiscoverAwsVpcID=true --set clusterName=dynatrace-demo
+    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
+    - docker push "$CI_REGISTRY_IMAGE"
+  only:
+    - master
   when: manual
 
-deploy_oneagent:
-  stage: configure-dynatrace
-  extends: .dt_deploy-eks-oneagent
-  environment:
-    name: test
+deploy-application:
+  image: registry.gitlab.com/checkelmann/cicd-tools:latest
+  variables:
+      GIT_STRATEGY: fetch
+  script: |
+    kubectl get pods --all-namespaces
+  only:
+    - master
   when: manual
