--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ deploy-application:
   variables:
     GIT_STRATEGY: fetch
   script: |
-    helm upgrade --install -n ${CI_ENVIRONMENT_SLUG} sample-app ./chart/
+    helm upgrade --install --namespace=${CI_ENVIRONMENT_SLUG} sample-app ./chart/
   only:
     - master
   #when: manual
