--- a/ci-includes/dt_create_deployment_event.yaml
+++ b/ci-includes/dt_create_deployment_event.yaml
@@ -6,6 +6,12 @@ dt_create_deployment_event:
   when: manual
   script: |
     echo ${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_NAME}
+    if [ "${CI_COMMIT_TAG}" == "" ]; then
+      VERSION=${CI_COMMIT_SHORT_SHA}
+    else
+      VERSION=${CI_COMMIT_TAG}
+    fi
+    echo $VERSION
     export DT_PAYLOAD="
     {
       \"eventType\": \"CUSTOM_DEPLOYMENT\",
