--- a/ci-includes/dt_create_deployment_event.yaml
+++ b/ci-includes/dt_create_deployment_event.yaml
@@ -28,7 +28,7 @@ dt_create_deployment_event:
         }
       },
       \"deploymentName\":\"${CI_COMMIT_MESSAGE}\",
-      \"deploymentVersion\":\"${CI_COMMIT_TAG}\",
+      \"deploymentVersion\":\"${VERSION}\",
       \"deploymentProject\":\"${CI_PROJECT_ID}\",
       \"remediationAction\":\"https://myrevertservice/revert?project=${CI_PROJECT_ID}&service=${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_SLUG}&failed_jobid=${CI_JOB_ID}\",
       \"ciBackLink\":\"${CI_PIPELINE_URL}\",
