--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,8 +48,11 @@ install-keptn:
     curl -o cluster.yaml https://gitlab.com/checkelmann/dynatrace-pipeline/raw/master/assets/cluster.yml    
     cluster_name=$(yq r cluster.yaml metadata.name)
     cluster_region=$(yq r cluster.yaml metadata.region)
+    curl -o creds.json https://gitlab.com/checkelmann/dynatrace-pipeline/raw/master/assets/keptn_creds.json
+    sed -i -- s/CLUSTER_NAME_PLACEHOLDER/${cluster_name}/g creds.json
+    sed -i -- s/AWS_REGION/${cluster_region}/g creds.json
     eksctl utils update-coredns --name=${cluster_name} --region=${cluster_region} --approve
-    keptn install --platform=eks
+    keptn install --platform=eks -c=creds.json --keptn-version=0.5.2
   when: manual  
 
 #deploy_oneagent:
