--- a/ci-includes/dt_deploy-eks-oneagent.yml
+++ b/ci-includes/dt_deploy-eks-oneagent.yml
@@ -1,9 +1,9 @@
 # This stage will install the Dynatrace Oneagent Operator on your K8s Cluster
-.dt_deploy-eks-oneagent:
+dt_deploy-eks-oneagent:
   image: registry.gitlab.com/checkelmann/cicd-tools:latest    
   variables:
       GIT_STRATEGY: none
-  stage: configure-dynatrace
+  stage: aws-eks-oneagent
   script: |
     kubectl create namespace dynatrace
     LATEST_RELEASE=$(curl -s https://api.github.com/repos/dynatrace/dynatrace-oneagent-operator/releases/latest | grep tag_name | cut -d '"' -f 4)
