--- a/ci-includes/dt_create_deployment_event.yaml
+++ b/ci-includes/dt_create_deployment_event.yaml
@@ -11,34 +11,13 @@ dt_create_deployment_event:
       VERSION=${CI_COMMIT_TAG}
     fi
     echo $VERSION
-    export DT_PAYLOAD="
-    {
-      \"eventType\": \"CUSTOM_DEPLOYMENT\",
-      \"attachRules\": {
-        \"tagRule\" : {
-            \"meTypes\" : \"SERVICE\",
-            \"tags\" : [ 
-              {
-                \"context\": \"CONTEXTLESS\",
-                \"key\": \"deployment_group\", 
-                \"value\": \"${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_NAME}\"
-              }
-            ]
-        }
-      },
-      \"deploymentName\":\"${CI_COMMIT_MESSAGE}\",
-      \"deploymentVersion\":\"${VERSION}\",
-      \"deploymentProject\":\"${CI_PROJECT_ID}\",
-      \"remediationAction\":\"https://myrevertservice/revert?project=${CI_PROJECT_ID}&service=${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_SLUG}&failed_jobid=${CI_JOB_ID}\",
-      \"ciBackLink\":\"${CI_PIPELINE_URL}\",
-      \"source\":\"GitLab\",
-      \"customProperties\":{
-        \"CI_JOB_URL\": \"${CI_JOB_URL}\",
-        \"CI_JOB_ID\": \"${CI_JOB_ID}\",
-        \"CI_PROJECT_ID\": \"${CI_PROJECT_ID}\",
-        \"Commit\": \"${GIT_COMMIT}\"
-      }
-    }
-    "
-    echo $DT_PAYLOAD > payload.tmp
-    curl -L -H "Authorization: Api-Token ${DT_API_TOKEN}" -H "Content-Type: application/json" "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/events" -d @payload.tmp
+
+    REMIDATION_ACTION="-rA https://myrevertservice/revert?project=${CI_PROJECT_ID}&service=${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_SLUG}&failed_jobid=${CI_JOB_ID}\"
+    COMMON_PARAMETER="-I ${DT_TENANT_ID} -A ${DT_API_TOKEN}"
+    SPEZIFIC_PARAMETER="-t 'CUSTOM_DEPLOYMENT' -s 'GitLab' -n '${CI_COMMIT_MESSAGE}' -v '${VERSION}' -p '${CI_PROJECT_ID}' ${REMIDATION_ACTION} -cL ${CI_PIPELINE_URL}"
+    TAGGING_RULES="-tR 'deployment_group=${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_NAME}'"
+    CUSTOM_PROPERTIES="-c 'CI_JOB_URL=${CI_JOB_URL},CI_JOB_ID=${CI_JOB_ID},CI_PROJECT_ID=${CI_PROJECT_ID},Commit=${GIT_COMMIT}'"
+    COMMAND_PARAMETER="create-deployment-event ${COMMON_PARAMETER} ${SPEZIFIC_PARAMETER} ${CUSTOM_PROPERTIES} ${TAGGING_RULES}"
+
+    echo $COMMAND_PARAMETER
+    python /dynapie.py $COMMAND_PARAMETER
