set config tenant to manual

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,3 +132,8 @@ dt_deploy-eks-oneagent:
   environment:
     name: test
   when: manual
+
+dt_configure_tenant:
+  environment:
+    name: test
+  when: manual
