added dynapie parameters

--- a/ci-includes/dt_create_deployment_event.yaml
+++ b/ci-includes/dt_create_deployment_event.yaml
@@ -17,7 +17,7 @@ dt_create_deployment_event:
     SPEZIFIC_PARAMETER="-t 'CUSTOM_DEPLOYMENT' -s 'GitLab' -n '${CI_COMMIT_MESSAGE}' -v '${VERSION}' -p '${CI_PROJECT_ID}' ${REMIDATION_ACTION} -cL ${CI_PIPELINE_URL}"
     TAGGING_RULES="-tR 'deployment_group=${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_NAME}'"
     CUSTOM_PROPERTIES="-c 'CI_JOB_URL=${CI_JOB_URL},CI_JOB_ID=${CI_JOB_ID},CI_PROJECT_ID=${CI_PROJECT_ID},Commit=${GIT_COMMIT}'"
-    COMMAND_PARAMETER="create-deployment-event ${COMMON_PARAMETER} ${SPEZIFIC_PARAMETER} ${CUSTOM_PROPERTIES} ${TAGGING_RULES}"
+    DYNAPIE_PARAMETER="create-deployment-event ${COMMON_PARAMETER} ${SPEZIFIC_PARAMETER} ${CUSTOM_PROPERTIES} ${TAGGING_RULES}"
 
-    echo $COMMAND_PARAMETER
-    python /dynapie.py $COMMAND_PARAMETER
+    echo "$DYNAPIE_PARAMETER"
+    python /dynapie.py $DYNAPIE_PARAMETER
